--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "internal/utesting/blocktraces"]
 	path = internal/utesting/blocktraces
 	url = git@github.com:scroll-tech/test-traces.git
+[submodule "lib/solmate"]
+	path = lib/solmate
+	url = https://github.com/transmissions11/solmate
