--- a/rollup/circuitcapacitychecker/libzkp/Cargo.toml
+++ b/rollup/circuitcapacitychecker/libzkp/Cargo.toml
@@ -23,9 +23,9 @@ poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "main
 bls12_381 = { git = "https://github.com/scroll-tech/bls12_381", branch = "feat/impl_scalar_field" }
 
 [dependencies]
-halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1" }
-prover = { git = "https://github.com/scroll-tech/zkevm-circuits.git", tag = "v0.10.0l", default-features = false, features = ["parallel_syn", "scroll", "shanghai"] }
+prover = { git = "https://github.com/scroll-tech/zkevm-circuits.git", tag = "v0.10.0rc1", default-features = false, features = ["parallel_syn", "scroll", "shanghai", "strict-ccc"] }
 
+anyhow = "1.0"
 base64 = "0.13.0"
 env_logger = "0.9.0"
 libc = "0.2"
