--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -20,13 +20,14 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build docker image
+    - name: Build docker image arm64
       uses: docker/build-push-action@v5
       with:
         context: .
         file: Dockerfile
         # push: ${{ startsWith(github.ref, 'refs/tags/') }}
         push: true
+        platforms: linux/arm64
         tags: scrolltech/l2geth:${{github.ref_name}}
         # cache-from: type=gha,scope=${{ github.workflow }}
         # cache-to: type=gha,scope=${{ github.workflow }}
