test workflow on self-hosted runner

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: jenkins
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
