--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -25,6 +25,7 @@ jobs:
       with:
         context: .
         file: Dockerfile
+        platforms: linux/amd64,linux/arm64
         # push: ${{ startsWith(github.ref, 'refs/tags/') }}
         push: true
         tags: scrolltech/l2geth:${{github.ref_name}}
