--- a/rollup/rollup_sync_service/Dockerfile
+++ b/rollup/rollup_sync_service/Dockerfile
@@ -1,13 +1,13 @@
-ARG GO_VERSION=1.21
+ARG GO_VERSION=1.21.1
 ARG RUST_VERSION=nightly-2023-12-03
 ARG CARGO_CHEF_TAG=0.1.41
 
 FROM ubuntu:20.04
 
-RUN apt-get update && ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime
+RUN apt-get update
 
 # Install basic packages
-RUN apt-get install -y build-essential
+RUN ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && apt-get install -y build-essential
 RUN apt-get install -y curl
 RUN apt-get install -y wget
 RUN apt-get install -y git
@@ -32,7 +32,10 @@ RUN cargo install cargo-chef --locked --version ${CARGO_CHEF_TAG} \
 # Install Go
 ARG GO_VERSION
 RUN rm -rf /usr/local/go
-RUN wget https://go.dev/dl/go${GO_VERSION}.1.linux-amd64.tar.gz
-RUN tar -C /usr/local -xzf go${GO_VERSION}.1.linux-amd64.tar.gz
-RUN rm go${GO_VERSION}.1.linux-amd64.tar.gz
+RUN wget https://go.dev/dl/go${GO_VERSION}.linux-amd64.tar.gz
+RUN tar -C /usr/local -xzf go${GO_VERSION}.linux-amd64.tar.gz
+RUN rm go${GO_VERSION}.linux-amd64.tar.gz
 ENV PATH="/usr/local/go/bin:${PATH}"
+RUN wget https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libzktrie.so && mv libzktrie.so /usr/local/lib
+RUN wget https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so && mv libscroll_zstd.so /usr/local/lib
+ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
