--- a/Dockerfile.mockccc
+++ b/Dockerfile.mockccc
@@ -7,12 +7,22 @@ ARG BUILDNUM=""
 FROM scrolltech/go-rust-builder:go-1.20-rust-nightly-2022-12-10 as builder
 
 ADD . /go-ethereum
+
+RUN wget https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libzktrie.so
+RUN wget https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so
+ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(PWD)
+ENV CGO_LDFLAGS="-L$(PWD) -Wl,-rpath=$(PWD)"
 RUN cd /go-ethereum && env GO111MODULE=on go run build/ci.go install ./cmd/geth
 
 # Pull Geth into a second stage deploy alpine container
 FROM ubuntu:20.04
 
 COPY --from=builder /go-ethereum/build/bin/geth /usr/local/bin/
+
+RUN wget https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libzktrie.so
+RUN wget https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so
+ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(PWD)
+ENV CGO_LDFLAGS=-"L$(PWD) -Wl,-rpath=$(PWD)"
 
 EXPOSE 8545 8546 30303 30303/udp
 ENTRYPOINT ["geth"]
