--- a/Dockerfile.mockccc
+++ b/Dockerfile.mockccc
@@ -21,7 +21,7 @@ FROM ubuntu:20.04
 COPY --from=builder /go-ethereum/build/bin/geth /usr/local/bin/
 
 RUN mkdir /opt/lib
-RUN apt-get update && apt-get install -y wget
+RUN apt-get -qq update && apt-get -qq install -y wget
 RUN wget -O /opt/lib/libzktrie.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libzktrie.so
 RUN wget -O /opt/lib/libscroll_zstd.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so
 ENV LD_LIBRARY_PATH=/opt/lib
