--- a/Dockerfile.mockccc
+++ b/Dockerfile.mockccc
@@ -8,24 +8,28 @@ FROM scrolltech/go-rust-builder:go-1.20-rust-nightly-2022-12-10 as builder
 
 ADD . /go-ethereum
 
-RUN mkdir /opt/lib
-RUN wget -O /opt/lib/libzktrie.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libzktrie.so
-RUN wget -O /opt/lib/libscroll_zstd.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so
-ENV LD_LIBRARY_PATH=/opt/lib
-ENV CGO_LDFLAGS="-L/opt/lib -Wl,-rpath=/opt/lib"
-RUN cd /go-ethereum && env GO111MODULE=on go run build/ci.go install ./cmd/geth
+RUN mkdir -p /scroll/lib
+
+COPY --from=zkp-builder /app/target/release/libzkp.so /scroll/lib/
+COPY --from=zkp-builder /app/target/release/libzktrie.so /scroll/lib/
+RUN wget -O /scroll/libzstd/libscroll_zstd.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so
+
+ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/scroll/lib/
+ENV CGO_LDFLAGS="-L/scroll/lib/ -Wl,-rpath=/scroll/lib/"
 
 # Pull Geth into a second stage deploy alpine container
 FROM ubuntu:20.04
 
 COPY --from=builder /go-ethereum/build/bin/geth /usr/local/bin/
 
-RUN mkdir /opt/lib
-RUN apt-get -qq update && apt-get -qq install -y wget
-RUN wget -O /opt/lib/libzktrie.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libzktrie.so
-RUN wget -O /opt/lib/libscroll_zstd.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so
-ENV LD_LIBRARY_PATH=/opt/lib
-ENV CGO_LDFLAGS="-L/opt/lib -Wl,-rpath=/opt/lib"
+RUN mkdir -p /scroll/lib
+
+COPY --from=zkp-builder /app/target/release/libzkp.so /scroll/lib/
+COPY --from=zkp-builder /app/target/release/libzktrie.so /scroll/lib/
+RUN wget -O /scroll/libzstd/libscroll_zstd.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so
+
+ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/scroll/lib/
+ENV CGO_LDFLAGS="-L/scroll/lib/ -Wl,-rpath=/scroll/lib/"
 
 EXPOSE 8545 8546 30303 30303/udp
 ENTRYPOINT ["geth"]
