--- a/Dockerfile.mockccc
+++ b/Dockerfile.mockccc
@@ -13,6 +13,7 @@ RUN mkdir -p /scroll/lib
 COPY --from=zkp-builder /app/target/release/libzkp.so /scroll/lib/
 COPY --from=zkp-builder /app/target/release/libzktrie.so /scroll/lib/
 RUN wget -O /scroll/lib/libscroll_zstd.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so
+RUN wget -O /scroll/lib/libzktrie.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so
 
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/scroll/lib/
 ENV CGO_LDFLAGS="-L/scroll/lib/ -Wl,-rpath=/scroll/lib/"
@@ -27,6 +28,7 @@ RUN mkdir -p /scroll/lib
 COPY --from=zkp-builder /app/target/release/libzkp.so /scroll/lib/
 COPY --from=zkp-builder /app/target/release/libzktrie.so /scroll/lib/
 RUN wget -O /scroll/lib/libscroll_zstd.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so
+RUN wget -O /scroll/lib/libzktrie.so https://github.com/scroll-tech/da-codec/releases/download/v0.0.0-rc0-ubuntu20.04/libscroll_zstd.so
 
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/scroll/lib/
 ENV CGO_LDFLAGS="-L/scroll/lib/ -Wl,-rpath=/scroll/lib/"
