--- a/Dockerfile.mockccc
+++ b/Dockerfile.mockccc
@@ -8,7 +8,7 @@ FROM scrolltech/go-rust-builder:go-1.20-rust-nightly-2022-12-10 as builder
 
 ADD . /go-ethereum
 
-RUN mkdir -p /scroll/lib
+RUN mkdir -p /scroll/lib/
 
 COPY --from=zkp-builder /app/target/release/libzkp.so /scroll/lib/
 COPY --from=zkp-builder /app/target/release/libzktrie.so /scroll/lib/
@@ -23,7 +23,7 @@ FROM ubuntu:20.04
 
 COPY --from=builder /go-ethereum/build/bin/geth /usr/local/bin/
 
-RUN mkdir -p /scroll/lib
+RUN mkdir -p /scroll/lib/
 
 COPY --from=zkp-builder /app/target/release/libzkp.so /scroll/lib/
 COPY --from=zkp-builder /app/target/release/libzktrie.so /scroll/lib/
